methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:9: error: Unmatched closing brace '}' ignored here
}
^