methods.picture.PatternPicture.scala.code
def marquer (c:Color) = {setCouleurBrosse(c);baisseBrosse();leveBrosse()}

def pattern ()  {avance();marquer(Color.RED);avance();marquer(Color.BLUE);avance();gauche();avance();marquer(Color.BLUE);avance();marquer(Color.GREEN);avance();gauche();avance();marquer(Color.GREEN);avance();marquer(Color.YELLOW);avance();gauche();avance();marquer(Color.YELLOW);avance();marquer(Color.RED);avance();gauche()}

override def run() {pattern();avance(4);pattern();recule(4);gauche();avance(4);droite();pattern();avance(4);pattern()}
  avance(4)
}